# oreilly-finetuning-llm

./: 10-prepare-dataset-finetune.ipynb  10000_All_Beauty.json.xz  11-bert-finetune-classification.ipynb  12-alternative-zeroshot.ipynb  2000_All_Beauty.json.xz  21-sbert-finetune.ipynb  22-create-sbert-data-qwen-reranker.ipynb  22a-create-sbert-data-zeroentropy-reranker.ipynb  22b-create-sbert-data-jina-reranker.ipynb  22c-create-sbert-data-qwen-reranker.ipynb  23-sbert-finetune-qwen-reranker.ipynb  31-phi1-full-finetune.ipynb  31-qwen2-05-full-finetune.ipynb  31a-qwen3-07-full-finetune.ipynb  31b-qwen2-05-bare.ipynb  31b-qwen2-05.ipynb  31b-qwen3-07.ipynb  32-llama32-1-huggingface.ipynb  32a-llama32-1-huggingface.ipynb  32b-llama32-1.ipynb  33-smolvm-1-huggingface.ipynb  33a-smolm-1-huggingface.ipynb  33b-smolm-1.ipynb  33b-smolvm-1.ipynb  34-phi3-unsloth.ipynb  34a-phi3-unsloth.ipynb  34b-phi3.ipynb  README.md  pyproject.toml  requirements.txt
