[project]
name = "finetuning-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "flash-attn>=2.8.1",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "liger-kernel>=0.6.0",
    "peft>=0.16.0",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "trl>=0.19.1",
    "unsloth>=2025.7.2",
]
