[project]
name = "finetuning-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "bitsandbytes>=0.49.2",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kernels>=0.12.2",
    "liger-kernel>=0.7.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "pip>=26.0.1",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "trl>=0.24.0",
    "unsloth>=2026.3.4",
]
